--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="hero-content">
                 <div class="hero-logo">
                     <img src="junubmart-logo.png" alt="JunubMart" class="hero-logo-image">
-                    <h1>You NEED it, WE have GOT it !!</h1>
+                    <h1>Explore, Discover, Shop – JunubMart</h1>
                 </div>
                 <p>Your premier online marketplace in Juba, South Sudan. Discover quality products, tech gadgets, and reliable delivery services.</p>
                 <a href="products.html" class="btn">Shop Now</a>
