--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
         <div class="container">
             <nav class="navbar">
                 <a href="index.html" class="logo">
-                    <img src="junubmart-logo.png" alt="JunubMart" class="logo-image">
-                    <div class="logo-text">
-                        JUNUB <span>MART</span>
+                    <img src="assets/junubmart-logo.png" alt="JunubMart" class="logo-image">
                     </div>
                 </a>
                 <ul class="nav-menu">
