--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <nav class="navbar">
                 <a href="index.html" class="logo">
                     <img src="assets/junubmart-logo.png" alt="JunubMart" class="logo-image">
+                    <div class="logo-text">
+                        JUNUB <span>MART</span>
                     </div>
                 </a>
                 <ul class="nav-menu">
