--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="hero">
         <div class="particles" id="particles"></div>
         <video class="hero-video" autoplay muted loop>
-            <source src="https://assets.mixkit.co/videos/preview/mixkit-abstract-digital-technology-background-129-large.mp4" type="video/mp4">
+            <source src="assets/juba.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero-overlay"></div>
@@ -97,23 +97,23 @@
                 </div>
                 <div class="product-card" data-category="fashion">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Casual T-Shirt">
+                        <img src="assets/ipadd.jpg" alt="Casual T-Shirt">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Premium Cotton T-Shirt</h3>
-                        <div class="product-price">$24.99</div>
-                        <p class="product-description">Soft, breathable cotton t-shirt available in multiple colors and sizes for everyday comfort.</p>
+                        <h3 class="product-name">iPad Pro 12.9</h3>
+                        <div class="product-price">$789.99</div>
+                        <p class="product-description">Experience ultimate performance and stunning Retina display with the new iPad Pro 12.9-inch model.</p>
                         <a href="products.html" class="btn btn-outline">View Details</a>
                     </div>
                 </div>
                 <div class="product-card" data-category="home">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1556228453-efd6c1ff04f6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Coffee Maker">
+                        <img src="assets/tecno.jpg" alt="Coffee Maker">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Automatic Coffee Maker</h3>
-                        <div class="product-price">$149.99</div>
-                        <p class="product-description">Brew perfect coffee every time with this programmable coffee maker with thermal carafe.</p>
+                        <h3 class="product-name">Tecno Camon 20</h3>
+                        <div class="product-price">$249.99</div>
+                        <p class="product-description"> Capture stunning photos and enjoy smooth performance with the latest Tecno Camon 20 smartphone.</p>
                         <a href="products.html" class="btn btn-outline">View Details</a>
                     </div>
                 </div>
