--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
     <main class="page-content">
         <!-- Hero Section -->
         <section class="hero">
-            <img class="hero-image" src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="JunubMart Products">
+            <img class="hero-image" src="assets/apple.jpg" alt="JunubMart Products">
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Our Products</h1>
@@ -65,29 +65,29 @@
                             <h3 class="product-name">Premium Wireless Headphones</h3>
                             <div class="product-price">$89.99</div>
                             <p class="product-description">High-quality sound with noise cancellation technology and comfortable fit for all-day use.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
+                            <a href="contact.html" class="btn btn-outline">Order Now</a>
                         </div>
                     </div>
                     <div class="product-card" data-category="fashion">
                         <div class="product-image">
-                            <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Casual T-Shirt">
+                            <img src="assets/ipadd.jpg" alt="Casual T-Shirt">
                         </div>
                         <div class="product-info">
-                            <h3 class="product-name">Premium Cotton T-Shirt</h3>
-                            <div class="product-price">$24.99</div>
-                            <p class="product-description">Soft, breathable cotton t-shirt available in multiple colors and sizes for everyday comfort.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
+                            <h3 class="product-name">iPad Pro 12.9</h3>
+                            <div class="product-price">$789.99</div>
+                            <p class="product-description"> Experience ultimate performance and stunning Retina display with the new iPad Pro 12.9-inch model.</p>
+                            <a href="contact.html" class="btn btn-outline">Order Now</a>
                         </div>
                     </div>
                     <div class="product-card" data-category="home">
                         <div class="product-image">
-                            <img src="https://images.unsplash.com/photo-1556228453-efd6c1ff04f6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Coffee Maker">
+                            <img src="assets/tecno.jpg" alt="Coffee Maker">
                         </div>
                         <div class="product-info">
-                            <h3 class="product-name">Automatic Coffee Maker</h3>
-                            <div class="product-price">$149.99</div>
-                            <p class="product-description">Brew perfect coffee every time with this programmable coffee maker with thermal carafe.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
+                            <h3 class="product-name">Tecno Camon 20</h3>
+                            <div class="product-price">$249.99</div>
+                            <p class="product-description"> Capture stunning photos and enjoy smooth performance with the latest Tecno Camon 20 smartphone.</p>
+                            <a href="contact.html" class="btn btn-outline">Order Now</a>
                         </div>
                     </div>
                     <div class="product-card" data-category="electronics">
@@ -98,31 +98,8 @@
                             <h3 class="product-name">Smart Fitness Watch</h3>
                             <div class="product-price">$199.99</div>
                             <p class="product-description">Track your fitness, receive notifications, and monitor your health with this advanced smartwatch.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
+                            <a href="contact.html" class="btn btn-outline">Order Now</a>
                         </div>
-                    </div>
-                    <div class="product-card" data-category="accessories">
-                        <div class="product-image">
-                            <img src="https://images.unsplash.com/photo-1584917865442-de89df76afd3?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Leather Bag">
-                        </div>
-                        <div class="product-info">
-                            <h3 class="product-name">Genuine Leather Bag</h3>
-                            <div class="product-price">$129.99</div>
-                            <p class="product-description">Durable and stylish leather bag with multiple compartments for your everyday essentials.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="product-card" data-category="home">
-                        <div class="product-image">
-                            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Modern Sofa">
-                        </div>
-                        <div class="product-info">
-                            <h3 class="product-name">Modern Living Room Sofa</h3>
-                            <div class="product-price">$599.99</div>
-                            <p class="product-description">Comfortable and stylish sofa that complements any modern living space with premium upholstery.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
-                        </div>
-                    </div>
                     <div class="product-card" data-category="electronics">
                         <div class="product-image">
                             <img src="https://images.unsplash.com/photo-1491933382434-500287f9b54b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Smartphone">
@@ -131,19 +108,10 @@
                             <h3 class="product-name">Latest Smartphone</h3>
                             <div class="product-price">$699.99</div>
                             <p class="product-description">Feature-rich smartphone with advanced camera system, long battery life, and stunning display.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
+                            <a href="contact.html" class="btn btn-outline">Order Now</a>
                         </div>
                     </div>
-                    <div class="product-card" data-category="fashion">
-                        <div class="product-image">
-                            <img src="https://images.unsplash.com/photo-1535585209827-a15fcdbc4c2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Running Shoes">
-                        </div>
-                        <div class="product-info">
-                            <h3 class="product-name">Premium Running Shoes</h3>
-                            <div class="product-price">$119.99</div>
-                            <p class="product-description">Lightweight and comfortable running shoes with advanced cushioning for optimal performance.</p>
-                            <a href="#" class="btn btn-outline">Add to Cart</a>
-                        </div>
+                    
                     </div>
                 </div>
             </div>
