--- a/contact.html
+++ b/contact.html
@@ -149,10 +149,10 @@
                     <h3>JunubMart</h3>
                     <p>Your premium online shopping destination in Juba, South Sudan. Quality products, fast delivery, and exceptional service.</p>
                     <div class="social-links">
-                        <a href="#" class="social-link">fab fa-facebook-f</a>
-                        <a href="#" class="social-link">fab fa-twitter</a>
-                        <a href="#" class="social-link">fab fa-linkedin-in</a>
-                        <a href="#" class="social-link">fab fa-instagram</a>
+                        <a href="#" class="social-link">f</a>
+                        <a href="#" class="social-link">t</a>
+                        <a href="#" class="social-link">ln</a>
+                        <a href="#" class="social-link">ig</a>
                     </div>
                 </div>
                 <div class="footer-column">
