--- a/contact.html
+++ b/contact.html
@@ -80,32 +80,41 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- ✅ Updated Contact Form with StaticForms Integration -->
                     <div class="contact-form">
-                        <form id="contactForm">
+                        <form action="https://api.staticforms.dev/submit" method="POST">
+                            <!-- Replace YOUR_API_KEY with your actual key -->
+                            <input type="hidden" name="accessKey" value="sf_2e9n9a9ggm51l0hl09bd5efn">
+
+                            <!-- Optional redirect after success -->
+                            <input type="hidden" name="redirectTo" value="https://yourwebsite.com/thank-you.html">
+
                             <div class="form-group">
                                 <label for="name">Full Name</label>
-                                <input type="text" id="name" class="form-control" required>
+                                <input type="text" id="name" name="name" class="form-control" required>
                             </div>
                             <div class="form-group">
                                 <label for="email">Email Address</label>
-                                <input type="email" id="email" class="form-control" required>
+                                <input type="email" id="email" name="email" class="form-control" required>
                             </div>
                             <div class="form-group">
                                 <label for="phone">Phone Number</label>
-                                <input type="tel" id="phone" class="form-control">
+                                <input type="tel" id="phone" name="phone" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="subject">Subject</label>
-                                <input type="text" id="subject" class="form-control" required>
+                                <input type="text" id="subject" name="subject" class="form-control" required>
                             </div>
                             <div class="form-group">
                                 <label for="message">Your Message</label>
-                                <textarea id="message" class="form-control" required></textarea>
+                                <textarea id="message" name="message" class="form-control" required></textarea>
                             </div>
                             <button type="submit" class="btn" style="width: 100%;">Send Message</button>
                         </form>
                     </div>
                 </div>
+
                 <div class="map-container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.954293046432!2d31.58223431475389!3d4.851622396542645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x171f3a0d59e93d8f%3A0x8c5e2b8d2a5c5e5e!2sJuba%2C%20South%20Sudan!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus" allowfullscreen="" loading="lazy"></iframe>
                 </div>
@@ -187,7 +196,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 JunubMart. All rights reserved. | Designed with ❤️ in Juba, South Sudan</p>
+                <p>&copy; 2025 JunubMart. All rights reserved. | Designed by Riek Gatluak</p>
             </div>
         </div>
     </footer>
