--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,39 @@
     <meta name="description" content="Get in touch with JunubMart. Contact us for inquiries, support, or visit our location in Juba, South Sudan.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Success message styling */
+        .form-success {
+            display: none;
+            margin-top: 1rem;
+            padding: 1rem;
+            background-color: #e6ffed;
+            border: 1px solid #22c55e;
+            border-radius: 8px;
+            color: #166534;
+            font-weight: 500;
+            text-align: center;
+            animation: fadeIn 0.4s ease-in-out;
+        }
+
+        .form-error {
+            display: none;
+            margin-top: 1rem;
+            padding: 1rem;
+            background-color: #fee2e2;
+            border: 1px solid #ef4444;
+            border-radius: 8px;
+            color: #991b1b;
+            font-weight: 500;
+            text-align: center;
+            animation: fadeIn 0.4s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(5px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
     <!-- Header & Navigation -->
@@ -81,10 +114,9 @@
                         </div>
                     </div>
 
-                    <!-- ✅ Updated Contact Form with StaticForms Integration -->
+                    <!-- ✅ StaticForms Contact Form with Thank You Message -->
                     <div class="contact-form">
-                        <form action="https://api.staticforms.dev/submit" method="POST">
-                            <!-- Replace YOUR_API_KEY with your actual key -->
+                        <form id="contactForm" action="https://api.staticforms.dev/submit" method="POST">
                             <input type="hidden" name="accessKey" value="sf_2e9n9a9ggm51l0hl09bd5efn">
 
                             <div class="form-group">
@@ -108,6 +140,9 @@
                                 <textarea id="message" name="message" class="form-control" required></textarea>
                             </div>
                             <button type="submit" class="btn" style="width: 100%;">Send Message</button>
+
+                            <div class="form-success" id="formSuccess">✅ Thank you! Your message has been sent successfully.</div>
+                            <div class="form-error" id="formError">❌ Oops! Something went wrong. Please try again.</div>
                         </form>
                     </div>
                 </div>
@@ -193,10 +228,52 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 JunubMart. All rights reserved. | Designed by Riek Gatluak</p>
+                <p>&copy; 2025 JunubMart. All rights reserved. | Designed with ❤️ in Juba, South Sudan</p>
             </div>
         </div>
     </footer>
+
+    <!-- JS -->
+    <script>
+        // Handle StaticForms submission asynchronously
+        const form = document.getElementById('contactForm');
+        const successMsg = document.getElementById('formSuccess');
+        const errorMsg = document.getElementById('formError');
+
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            successMsg.style.display = 'none';
+            errorMsg.style.display = 'none';
+
+            const formData = new FormData(form);
+            const object = Object.fromEntries(formData.entries());
+            const json = JSON.stringify(object);
+
+            const btn = form.querySelector('button[type="submit"]');
+            btn.disabled = true;
+            btn.textContent = 'Sending...';
+
+            try {
+                const res = await fetch(form.action, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' },
+                    body: json
+                });
+
+                if (res.ok) {
+                    form.reset();
+                    successMsg.style.display = 'block';
+                } else {
+                    errorMsg.style.display = 'block';
+                }
+            } catch (err) {
+                errorMsg.style.display = 'block';
+            } finally {
+                btn.disabled = false;
+                btn.textContent = 'Send Message';
+            }
+        });
+    </script>
 
     <script src="script.js"></script>
 </body>
